crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_v2__v2_md_license.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_v2.rs
assertion_line: 277
expression: rendered
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## License radar

- Effective: `Apache-2.0`
- Heuristic detection; not legal advice.

|SPDX|Confidence|Source|Kind|
|---|---:|---|---|
|Apache-2.0|0.98|LICENSE|Text|
|MIT|0.85|Cargo.toml|Metadata|
