crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_v2__v2_md_topics.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_v2.rs
assertion_line: 202
expression: rendered
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Topics

- Overall: `compiler, optimization`
- `src`: parsing, ast
