crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_v2__v2_xml_complexity.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_v2.rs
assertion_line: 320
expression: rendered
---
<analysis></analysis>
